--- a/contrib/debian/manpages/bitcoin.conf.5
+++ b/contrib/debian/manpages/bitcoin.conf.5
@@ -1,4 +1,4 @@
-.TH BITCOIN.CONF "5" "February 2016" "bitcoin.conf 0.12"
+.TH BITCOIN.CONF "5" "April 2019" "bitcoin.conf v13.2-0"
 .SH NAME
 bitcoin.conf \- bitcoin configuration file
 .SH SYNOPSIS
