--- a/contrib/debian/changelog
+++ b/contrib/debian/changelog
@@ -1,3 +1,7 @@
+freicoin (10.4-precise1) precise; urgency=high
+
+ -- Mark Friedenbach <mark@friedenbach.org>
+
 freicoin (0.9.5.0-precise6) precise; urgency=high
 
  -- Mark Friedenbach <mark@friedenbach.org>
