--- a/contrib/debian/changelog
+++ b/contrib/debian/changelog
@@ -1,3 +1,7 @@
+freicoin (11.3-precise1) precise; urgency=high
+
+ -- Mark Friedenbach <mark@friedenbach.org>
+
 freicoin (10.4.2-precise1) precise; urgency=high
 
  -- Mark Friedenbach <mark@friedenbach.org>
