--- a/contrib/debian/changelog
+++ b/contrib/debian/changelog
@@ -1,3 +1,27 @@
+freicoin (12.1.3.2-precise1) precise; urgency=high
+
+ -- Mark Friedenbach <mark@friedenbach.org>
+
+freicoin (12.1.3.1-precise1) precise; urgency=high
+
+ -- Mark Friedenbach <mark@friedenbach.org>
+
+freicoin (12.1.3-precise1) precise; urgency=high
+
+ -- Mark Friedenbach <mark@friedenbach.org>
+
+freicoin (12.1.2-precise1) precise; urgency=high
+
+ -- Mark Friedenbach <mark@friedenbach.org>
+
+freicoin (12.1.1-precise1) precise; urgency=high
+
+ -- Mark Friedenbach <mark@friedenbach.org>
+
+freicoin (12.1-precise1) precise; urgency=high
+
+ -- Mark Friedenbach <mark@friedenbach.org>
+
 freicoin (11.3-precise1) precise; urgency=high
 
  -- Mark Friedenbach <mark@friedenbach.org>
